RESOLVED FIXED234010
[CSS Cascade Layers] CSSImportRule.cssText doesn't include layer parameter
https://bugs.webkit.org/show_bug.cgi?id=234010
Summary [CSS Cascade Layers] CSSImportRule.cssText doesn't include layer parameter
Antti Koivisto
Reported 2021-12-08 08:32:49 PST
Serialize layer in CSSImportRule
Attachments
Patch (9.86 KB, patch)
2021-12-08 09:36 PST, Antti Koivisto
no flags
Patch (10.07 KB, patch)
2021-12-08 09:52 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-12-08 09:36:23 PST
Antti Koivisto
Comment 2 2021-12-08 09:52:25 PST
EWS
Comment 3 2021-12-08 11:17:23 PST
Committed r286668 (244976@main): <https://commits.webkit.org/244976@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446380 [details].
Radar WebKit Bug Importer
Comment 4 2021-12-08 11:18:22 PST
Note You need to log in before you can comment on or make changes to this bug.