[CSS Cascade Layers] CSSImportRule.cssText doesn't include layer parameter https://bugs.webkit.org/show_bug.cgi?id=234010

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-cascade/parsing/layer-import-parsing-expected.txt:

Source/WebCore:

Fix serialization of import rules than include layer, like

@import url(foo.css) layer(A);

Also make the parsing of the layer() argument stricter.

* css/CSSImportRule.cpp:
(WebCore::CSSImportRule::cssText const):

Serialize the layer.

* css/CSSLayerBlockRule.cpp:
(WebCore::stringFromCascadeLayerName):

Serialize layer name segments as identifiers.

* css/parser/CSSParserImpl.cpp:
(WebCore::CSSParserImpl::consumeImportRule):

Fail parsing if there is anything left in the function argument after consuming the layer name.
If the parsing fails, revert and try the full string as media query.



Canonical link: https://commits.webkit.org/244976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286668 268f45cc-cd09-0410-ab3c-d52691b4dbfc